// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`shader fills enter the agent vocabulary > is a characterization snapshot of the shader vocabulary 1`] = `
[
  {
    "default": "Vector",
    "group": "Text",
    "key": "text",
    "kind": "text",
    "label": "Text",
  },
  {
    "default": "inter",
    "group": "Font",
    "hint": "Which variable family to set the type in. Changing it changes WHICH AXES EXIST.",
    "key": "fontId",
    "kind": "select",
    "label": "Font",
    "options": [
      "inter",
      "roboto-flex",
      "archivo",
      "fraunces",
      "recursive",
      "bricolage",
      "big-shoulders",
      "space-grotesk",
      "unbounded",
      "source-serif",
    ],
  },
  {
    "default": 120,
    "group": "Layout",
    "hint": "Em size in output pixels (CSS font-size semantics).",
    "key": "size",
    "kind": "slider",
    "label": "Size",
    "max": 600,
    "min": 8,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layout",
    "hint": "Extra letter spacing in 1/1000 em; 0 = the font's own spacing, negative tightens.",
    "key": "tracking",
    "kind": "slider",
    "label": "Tracking",
    "max": 500,
    "min": -200,
    "step": 1,
  },
  {
    "default": "center",
    "group": "Layout",
    "hint": "Horizontal anchoring of the glyph run.",
    "key": "align",
    "kind": "select",
    "label": "Align",
    "options": [
      "left",
      "center",
      "right",
    ],
  },
  {
    "default": "solid",
    "group": "Paint",
    "hint": "How this layer is painted: a flat colour, a gradient, or one of the procedural patterns.",
    "key": "layer.paint.type",
    "kind": "select",
    "label": "Fill type",
    "options": [
      "solid",
      "gradient",
      "ombre",
      "grid",
      "noise",
      "checkerboard",
      "stripes",
      "qr",
      "shader",
    ],
  },
  {
    "default": "glyph",
    "group": "Paint",
    "hint": "Which box this layer is measured against: each glyph, the whole word, or the frame (so the type moves over a fill that stays put).",
    "key": "layer.anchor",
    "kind": "select",
    "label": "Fill anchor",
    "options": [
      "glyph",
      "word",
      "frame",
    ],
  },
  {
    "default": 1,
    "group": "Paint",
    "hint": "How strong this layer's ink is in the stack. MULTIPLIES the glyph's own motion fade rather than replacing it, so a half-strength layer still fades out with the word.",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Layer opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "normal",
    "group": "Paint",
    "hint": "How this layer composites onto the layers below it (and onto the background, which this studio draws straight onto).",
    "key": "layer.blend",
    "kind": "select",
    "label": "Layer blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 0,
    "group": "Motion",
    "hint": "Seconds between glyphs. 0 = every glyph animates on one clock; raise it and a track becomes a wave travelling across the word.",
    "key": "motion.stagger.delay",
    "kind": "slider",
    "label": "Stagger",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "forward",
    "group": "Motion",
    "hint": "Which glyph goes first: forward, reverse, center (middle outwards), edges (outermost inwards), or random.",
    "key": "motion.stagger.order",
    "kind": "select",
    "label": "Stagger order",
    "options": [
      "forward",
      "reverse",
      "center",
      "edges",
      "random",
    ],
  },
  {
    "default": "fbm_warp",
    "group": "Shader",
    "hint": "Which catalog shader effect processes the fill underneath.",
    "key": "layer.paint.shader.effectId",
    "kind": "select",
    "label": "Effect",
    "options": [],
  },
  {
    "default": "object",
    "group": "Shader",
    "hint": "object = the field samples in the shape's own local space (tiles/moves with it); frame = it samples the whole frame's space (the shape is a window onto one continuous field).",
    "key": "layer.paint.shader.anchor",
    "kind": "select",
    "label": "Anchor",
    "options": [
      "object",
      "frame",
    ],
  },
  {
    "default": 1,
    "group": "Shader",
    "hint": "Animation rate multiplier for the effect; 0 = frozen (still).",
    "key": "layer.paint.shader.speed",
    "kind": "slider",
    "label": "Speed",
    "max": 4,
    "min": 0,
    "step": 0.05,
  },
  {
    "default": 6,
    "group": "Effect",
    "key": "layer.paint.shader.params.segments",
    "kind": "slider",
    "label": "Segments",
    "max": 24,
    "min": 2,
    "step": 0.01,
  },
  {
    "default": 1,
    "group": "Effect",
    "key": "layer.paint.shader.params.zoom",
    "kind": "slider",
    "label": "Zoom",
    "max": 4,
    "min": 0.1,
    "step": 0.01,
  },
  {
    "default": "0",
    "group": "Effect",
    "key": "layer.paint.shader.params.mode",
    "kind": "select",
    "label": "Mode",
    "options": [
      "0",
      "1",
    ],
  },
]
`;

exports[`vtAgentControls > is a characterization snapshot, with and without a font loaded 1`] = `
[
  {
    "default": "Vector",
    "group": "Text",
    "key": "text",
    "kind": "text",
    "label": "Text",
  },
  {
    "default": "inter",
    "group": "Font",
    "hint": "Which variable family to set the type in. Changing it changes WHICH AXES EXIST.",
    "key": "fontId",
    "kind": "select",
    "label": "Font",
    "options": [
      "inter",
      "roboto-flex",
      "archivo",
      "fraunces",
      "recursive",
      "bricolage",
      "big-shoulders",
      "space-grotesk",
      "unbounded",
      "source-serif",
    ],
  },
  {
    "default": 120,
    "group": "Layout",
    "hint": "Em size in output pixels (CSS font-size semantics).",
    "key": "size",
    "kind": "slider",
    "label": "Size",
    "max": 600,
    "min": 8,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layout",
    "hint": "Extra letter spacing in 1/1000 em; 0 = the font's own spacing, negative tightens.",
    "key": "tracking",
    "kind": "slider",
    "label": "Tracking",
    "max": 500,
    "min": -200,
    "step": 1,
  },
  {
    "default": "center",
    "group": "Layout",
    "hint": "Horizontal anchoring of the glyph run.",
    "key": "align",
    "kind": "select",
    "label": "Align",
    "options": [
      "left",
      "center",
      "right",
    ],
  },
  {
    "default": "solid",
    "group": "Paint",
    "hint": "How this layer is painted: a flat colour, a gradient, or one of the procedural patterns.",
    "key": "layer.paint.type",
    "kind": "select",
    "label": "Fill type",
    "options": [
      "solid",
      "gradient",
      "ombre",
      "grid",
      "noise",
      "checkerboard",
      "stripes",
      "qr",
      "shader",
    ],
  },
  {
    "default": "#ffffff",
    "group": "Paint",
    "key": "layer.paint.a",
    "kind": "color",
    "label": "Fill",
  },
  {
    "default": "glyph",
    "group": "Paint",
    "hint": "Which box this layer is measured against: each glyph, the whole word, or the frame (so the type moves over a fill that stays put).",
    "key": "layer.anchor",
    "kind": "select",
    "label": "Fill anchor",
    "options": [
      "glyph",
      "word",
      "frame",
    ],
  },
  {
    "default": 1,
    "group": "Paint",
    "hint": "How strong this layer's ink is in the stack. MULTIPLIES the glyph's own motion fade rather than replacing it, so a half-strength layer still fades out with the word.",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Layer opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "normal",
    "group": "Paint",
    "hint": "How this layer composites onto the layers below it (and onto the background, which this studio draws straight onto).",
    "key": "layer.blend",
    "kind": "select",
    "label": "Layer blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 0,
    "group": "Motion",
    "hint": "Seconds between glyphs. 0 = every glyph animates on one clock; raise it and a track becomes a wave travelling across the word.",
    "key": "motion.stagger.delay",
    "kind": "slider",
    "label": "Stagger",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "forward",
    "group": "Motion",
    "hint": "Which glyph goes first: forward, reverse, center (middle outwards), edges (outermost inwards), or random.",
    "key": "motion.stagger.order",
    "kind": "select",
    "label": "Stagger order",
    "options": [
      "forward",
      "reverse",
      "center",
      "edges",
      "random",
    ],
  },
]
`;

exports[`vtAgentControls > is a characterization snapshot, with and without a font loaded 2`] = `
[
  {
    "default": "Vector",
    "group": "Text",
    "key": "text",
    "kind": "text",
    "label": "Text",
  },
  {
    "default": "inter",
    "group": "Font",
    "hint": "Which variable family to set the type in. Changing it changes WHICH AXES EXIST.",
    "key": "fontId",
    "kind": "select",
    "label": "Font",
    "options": [
      "inter",
      "roboto-flex",
      "archivo",
      "fraunces",
      "recursive",
      "bricolage",
      "big-shoulders",
      "space-grotesk",
      "unbounded",
      "source-serif",
    ],
  },
  {
    "default": 120,
    "group": "Layout",
    "hint": "Em size in output pixels (CSS font-size semantics).",
    "key": "size",
    "kind": "slider",
    "label": "Size",
    "max": 600,
    "min": 8,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layout",
    "hint": "Extra letter spacing in 1/1000 em; 0 = the font's own spacing, negative tightens.",
    "key": "tracking",
    "kind": "slider",
    "label": "Tracking",
    "max": 500,
    "min": -200,
    "step": 1,
  },
  {
    "default": "center",
    "group": "Layout",
    "hint": "Horizontal anchoring of the glyph run.",
    "key": "align",
    "kind": "select",
    "label": "Align",
    "options": [
      "left",
      "center",
      "right",
    ],
  },
  {
    "default": "solid",
    "group": "Paint",
    "hint": "How this layer is painted: a flat colour, a gradient, or one of the procedural patterns.",
    "key": "layer.paint.type",
    "kind": "select",
    "label": "Fill type",
    "options": [
      "solid",
      "gradient",
      "ombre",
      "grid",
      "noise",
      "checkerboard",
      "stripes",
      "qr",
      "shader",
    ],
  },
  {
    "default": "#ffffff",
    "group": "Paint",
    "key": "layer.paint.a",
    "kind": "color",
    "label": "Fill",
  },
  {
    "default": "glyph",
    "group": "Paint",
    "hint": "Which box this layer is measured against: each glyph, the whole word, or the frame (so the type moves over a fill that stays put).",
    "key": "layer.anchor",
    "kind": "select",
    "label": "Fill anchor",
    "options": [
      "glyph",
      "word",
      "frame",
    ],
  },
  {
    "default": 3,
    "group": "Paint",
    "hint": "Outline width in OUTPUT pixels, so it does not shrink with size.",
    "key": "layer.width",
    "kind": "slider",
    "label": "Stroke width",
    "max": 40,
    "min": 0,
    "step": 0.5,
  },
  {
    "default": 1,
    "group": "Paint",
    "hint": "How strong this layer's ink is in the stack. MULTIPLIES the glyph's own motion fade rather than replacing it, so a half-strength layer still fades out with the word.",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Layer opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "normal",
    "group": "Paint",
    "hint": "How this layer composites onto the layers below it (and onto the background, which this studio draws straight onto).",
    "key": "layer.blend",
    "kind": "select",
    "label": "Layer blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 0,
    "group": "Motion",
    "hint": "Seconds between glyphs. 0 = every glyph animates on one clock; raise it and a track becomes a wave travelling across the word.",
    "key": "motion.stagger.delay",
    "kind": "slider",
    "label": "Stagger",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "forward",
    "group": "Motion",
    "hint": "Which glyph goes first: forward, reverse, center (middle outwards), edges (outermost inwards), or random.",
    "key": "motion.stagger.order",
    "kind": "select",
    "label": "Stagger order",
    "options": [
      "forward",
      "reverse",
      "center",
      "edges",
      "random",
    ],
  },
  {
    "default": 400,
    "group": "Axes",
    "hint": "Weight — thin to black, as real outline geometry.",
    "key": "axes.wght",
    "kind": "slider",
    "label": "Weight",
    "max": 1000,
    "min": 100,
    "step": 1,
  },
  {
    "default": 100,
    "group": "Axes",
    "hint": "Width — condensed to extended.",
    "key": "axes.wdth",
    "kind": "slider",
    "label": "Width",
    "max": 151,
    "min": 25,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Axes",
    "hint": "Grade — weight WITHOUT changing the width the text occupies.",
    "key": "axes.GRAD",
    "kind": "slider",
    "label": "Grade",
    "max": 150,
    "min": -200,
    "step": 1,
  },
  {
    "default": 96,
    "group": "Axes",
    "hint": "Thick stroke — thickness of the vertical strokes.",
    "key": "axes.XOPQ",
    "kind": "slider",
    "label": "Thick stroke",
    "max": 175,
    "min": 27,
    "step": 1,
  },
]
`;
